# cactus

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Dockerfile  meson.build  meson_options.txt  project.json
.devcontainer/: devcontainer.json
include/: cactus.h
include/cactus/: bake_config.h  cactus.h
scripts/: generate.py
src/: main.c
src/base/: buf_stream.c  buf_stream.h  common.c  common.h  file_stream.c  file_stream.h  stream.c  stream.h
src/parser/: grammar.c  grammar.h  grammar.peg
src/utils/: buf_stream.c  buf_stream.h  file_stream.c  file_stream.h  stream.c  stream.h
tests/: buf_stream_test.c  clar.c  clar.h  clar.suite  file_stream_test.c  generate.py  meson.build  tests.c  tests.h
tests/base/: buf_stream.c  file_stream.c
tests/clar/: fixtures.h  fs.h  print.h  sandbox.h  summary.h
tests/data/: plain-text.txt
tests/syntax/: statement.c
